Resolves tdf#137424 - UI Picker missing 'Contextual single'

Exclusion by experimental on/off updated

Change-Id: I714b8ffc5a148d09607ab20763b6d35de2a9e2be
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104231
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>